update readme file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,13 +25,8 @@ spring.flyway.validate-on-migrate=false
 spring.flyway.table=schema_version
 spring.flyway.out-of-order=true
 
-# rabbitmq
-#spring.rabbitmq.host=192.168.49.2
-spring.rabbitmq.host=192.168.58.2
-spring.rabbitmq.port=31001
-#spring.rabbitmq.port=15672
-#spring.rabbitmq.host=rabbitmq.default.svc.cluster.local
-#spring.rabbitmq.port=5672
+# rabbitmq.default.svc.cluster.local
+spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
@@ -44,18 +39,11 @@ spring.rabbitmq.listener.simple.concurrency=5
 spring.rabbitmq.listener.simple.max-concurrency=10
 spring.rabbitmq.listener.simple.observation-enabled=true
 
-
 # cloud
 aws.region=us-east-1
 aws.access.key.id=test
 aws.secret.access.key=test
-aws.s3.url=http://192.168.58.2:30000
-
-#aws.s3.bucket.url=http://localstack:4566
-
-#http://localstack:4566}
-#aws.s3.bucket.url=http://localstack:4566
-#aws.s3.bucket.url=http://192.168.49.2:30000
+aws.s3.url=http://localstack:4566
 
 # security
 clipshot.token=QZ0zzuqBXrojJqW9EtUeXK1j7tImqipD
